Sensors, filters updated, projects added
